added femnistclustered dataset and baseline_constants

--- a/tangle/data/femnist_clustered_alt/cluster_alt_femnist.ipynb
+++ b/tangle/data/femnist_clustered_alt/cluster_alt_femnist.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,25 +56,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "users, _, data,  = read_dir('femnist-data/large/train')"
+    "users, _, data,  = read_dir('../../../../data/femnist-data/large/train')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "_, _, data_test,  = read_dir('femnist-data/large/test')"
+    "_, _, data_test,  = read_dir('../../../../data/femnist-data/large/test')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,18 @@
     }
    ],
    "source": [
-    "cleaned, cleaned_test, _ = clean_and_split(complete_data)"
+    "cleaned, cleaned_test, cluster_ids = clean_and_split(complete_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cluster_dict = dict(zip(users, cluster_ids))\n",
+    "with open('../../../cluster_alt_femnist_ids.json', 'w') as file: \n",
+    "    json.dump(cluster_dict, file)"
    ]
   },
   {
@@ -236,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -270,10 +281,31 @@
     "\n",
     "test_output['cluster_ids'] = train_output['cluster_ids']\n",
     "test_output['users'] = train_output['users']\n",
-    "with open('femnist-data-clustered-alt/train/data.json', 'w') as file: \n",
+    "with open('../../../../data/femnist-data-clustered-alt/train/data.json', 'w') as file: \n",
     "    json.dump(train_output, file)\n",
-    "with open('femnist-data-clustered-alt/test/data.json', 'w') as file: \n",
+    "with open('../../../../data/femnist-data-clustered-alt/test/data.json', 'w') as file: \n",
     "    json.dump(test_output, file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'train_output' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-a5277141bdd9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtrain_output\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'cluster_ids'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'train_output' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "train_output['cluster_ids']"
    ]
   },
   {
