Theory notebook cleanup

--- a/tangle/theory/simple_tip_selection.ipynb
+++ b/tangle/theory/simple_tip_selection.ipynb
@@ -83,7 +83,9 @@
     "NUM_ROUNDS = 150\n",
     "NODES_PER_ROUND = 10\n",
     "\n",
-    "DIST_STD_DEV = 100"
+    "DIST_STD_DEV = 100\n",
+    "\n",
+    "PARTICLES_DEPTH = 50"
    ]
   },
   {
@@ -117,21 +119,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Tip Selector entrypoints ('particles') for a given round\n",
-    "PARTICLES_DEPTH = 50\n",
-    "particles = [{'trunk': genesis.id, 'branch': genesis.id}]\n",
-    "def get_particles(round):\n",
-    "    return particles[max(round - PARTICLES_DEPTH, 0)]\n",
-    "def append_particles(txs, reference):\n",
-    "    particles.append({'trunk': reference, 'branch': np.random.choice(txs).id})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Results\n",
     "num_txs = []     # Number of published transactions per round\n",
     "consensus = []   # Value of consensus transaction per round (should converge to 0)"
@@ -147,7 +134,6 @@
    "source": [
     "for r in tqdm(range(NUM_ROUNDS)):\n",
     "    txs = []\n",
-    "    ps = get_particles(r)\n",
     "\n",
     "    for _ in range(NODES_PER_ROUND):\n",
     "        node_id = np.random.randint(NUM_NODES)\n",
@@ -163,10 +149,9 @@
     "        tangle.add_transaction(tx)  \n",
     "\n",
     "    tip_selector = MaxDepthTipSelector(tangle, PARTICLES_DEPTH)\n",
-    "    validation_node = TheoreticalNode(tangle, tx_store, tip_selector, 0, None, node_data[0])\n",
+    "    # Use 'the average' node (data=0) for validation\n",
+    "    validation_node = TheoreticalNode(tangle, tx_store, tip_selector, 0, None, 0)\n",
     "    reference_txs, reference = validation_node.obtain_reference_params()\n",
-    "\n",
-    "    append_particles(txs, reference_txs[0])\n",
     "\n",
     "    num_txs.append(len(txs))\n",
     "    consensus.append(np.linalg.norm(reference))"
@@ -196,7 +181,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "consensus[-1]"
+    "consensus[-1], min(consensus)"
    ]
   },
   {
@@ -204,9 +189,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "min(consensus)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
