Implemented speedup for one ray accuracy tip selector case

--- a/tangle/data/femnist_clustered_alt_relaxed/cluster_alt_relaxed_femnist.ipynb
+++ b/tangle/data/femnist_clustered_alt_relaxed/cluster_alt_relaxed_femnist.ipynb
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,8 @@
       "Not enough data for client f1992_08\n",
       "Not enough data for client f1995_29\n",
       "Not enough data for client f2044_20\n",
-      "Not enough data for client f2046_26\n"
+      "Not enough data for client f2046_26\n",
+      "True\n"
      ]
     }
    ],
@@ -208,7 +209,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3484\n",
+      "3484\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(list(cleaned.keys())))\n",
+    "print(len(list(cleaned_test.keys())))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +264,7 @@
     "test_output['users'] = train_output['users']\n",
     "with open('../../../../data/femnist-data-clustered-alt-relaxed/train/data.json', 'w') as file: \n",
     "    json.dump(train_output, file)\n",
-    "with open('../../../../data/femnist-data-clustered-alt-relaxed/train/data.json', 'w') as file: \n",
+    "with open('../../../../data/femnist-data-clustered-alt-relaxed/test/data.json', 'w') as file: \n",
     "    json.dump(test_output, file)"
    ]
   },
