--- a/tangle/data/femnist_clustered_alt/cluster_alt_femnist.ipynb
+++ b/tangle/data/femnist_clustered_alt/cluster_alt_femnist.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,14 +148,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "def clean_and_split(data, test_split=0.1):\n",
     "    cleaned = {}\n",
     "    cleaned_test = {}\n",
-    "    cluster_ids = [None] * len(users)\n",
+    "    cluster_ids = []\n",
     "    for user_index, username in enumerate(users):\n",
     "        userdata = {}\n",
     "        userdata['x']= []\n",
@@ -170,15 +170,15 @@
     "                                'y': userdata['y'][:train_size]}\n",
     "            cleaned_test[username]= {'x': userdata['x'][train_size:],\n",
     "                                     'y': userdata['y'][train_size:]}\n",
+    "            cluster_ids.append(user_index // users_per_cluster)\n",
     "        else:\n",
     "            print('Not enough data for client {}'.format(username))\n",
-    "        cluster_ids[user_index] = user_index // users_per_cluster\n",
     "    return cleaned, cleaned_test, cluster_ids"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -210,44 +210,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[11406 12362 11006 11511     0     0     0     0     0     0]\n",
+      "[    0     0     0     0 11007 10310 11400     0     0     0]\n",
+      "[    0     0     0     0     0     0     0 13099 12252 12619]\n"
+     ]
+    }
+   ],
    "source": [
-    "cluster_dict = dict(zip(users, cluster_ids))\n",
-    "with open('../../../cluster_alt_femnist_ids.json', 'w') as file: \n",
-    "    json.dump(cluster_dict, file)"
+    "cluster_clients = {}\n",
+    "for i in range(3):\n",
+    "    cluster_clients[i] = []\n",
+    "for index, client in enumerate(cleaned.keys()):\n",
+    "    if client in excluded_clients:\n",
+    "        continue\n",
+    "    cluster_clients[cluster_ids[index]].append(client)\n",
+    "\n",
+    "cluster_data = {cluster: np.concatenate([cleaned[client]['y'] for client in clients]) for (cluster, clients) in cluster_clients.items()}\n",
+    "\n",
+    "for cluster in range(3):\n",
+    "    hist, _ = np.histogram(cluster_data[cluster], bins=range(11))\n",
+    "    print(hist)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output = {} \n",
-    "output['user_data'], output['cluster_ids'] = clean(data_test)\n",
-    "output['users'] = users\n",
-    "with open('femnist-data-clustered-alt/test/data.json', 'w') as file: \n",
-    "    json.dump(output, file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output = {} \n",
-    "output['user_data'], output['cluster_ids'] = clean(data)\n",
-    "output['users'] = users\n",
-    "with open('femnist-data-clustered-alt/train/data.json', 'w') as file: \n",
-    "    json.dump(output, file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -289,23 +283,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'train_output' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-a5277141bdd9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtrain_output\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'cluster_ids'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'train_output' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "train_output['cluster_ids']"
+    "cluster_dict = dict(zip(users, cluster_ids))\n",
+    "with open('../../../cluster_alt_femnist_ids.json', 'w') as file: \n",
+    "    json.dump(cluster_dict, file)"
    ]
   },
   {
