changed data and experiment locations; removed unused docker files

--- a/next_character_exploration.ipynb
+++ b/next_character_exploration.ipynb
@@ -134,7 +134,7 @@
    "outputs": [],
    "source": [
     "# Create transaction store\n",
-    "transaction_store = LabTransactionStore(f'../experiments/{experiment_name}/config_{experiment_config}/tangle_data')\n",
+    "transaction_store = LabTransactionStore(f'./experiments/{experiment_name}/config_{experiment_config}/tangle_data')\n",
     "\n",
     "# Create model\n",
     "client_model = create_client_model(lab_seed, model_config)"
