--- a/tangle/data/cifar_100/CIFAR-100_larger_datasets.ipynb
+++ b/tangle/data/cifar_100/CIFAR-100_larger_datasets.ipynb
@@ -74,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = '../../../../data/cifar100/regular/'\n",
+    "data_dir = '../../.././data/cifar100/regular/'\n",
     "train_clients, train_cluster_ids, train_data, test_data = read_data(f'{data_dir}train/', f'{data_dir}test/')"
    ]
   },
@@ -159,9 +159,9 @@
     "    'users': list(new_train_data.keys())\n",
     "}\n",
     "\n",
-    "with open('../../../../data/cifar100/fewer_clients_more_data/train/data.json', 'w') as file: \n",
+    "with open('../../.././data/cifar100/fewer_clients_more_data/train/data.json', 'w') as file: \n",
     "    json.dump(train_output, file)\n",
-    "with open('../../../../data/cifar100/fewer_clients_more_data/test/data.json', 'w') as file: \n",
+    "with open('../../.././data/cifar100/fewer_clients_more_data/test/data.json', 'w') as file: \n",
     "    json.dump(test_output, file)"
    ]
   },
