--- a/tangle/data/femnist_clustered_alt_relaxed/cluster_alt_relaxed_femnist-Copy1.ipynb
+++ b/tangle/data/femnist_clustered_alt_relaxed/cluster_alt_relaxed_femnist-Copy1.ipynb
@@ -279,9 +279,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../../../../data/femnist-data-clustered-alt-relaxed/train/data.json', 'w') as file: \n",
+    "with open('../../.././data/femnist-data-clustered-alt-relaxed/train/data.json', 'w') as file: \n",
     "    json.dump(train_output, file)\n",
-    "with open('../../../../data/femnist-data-clustered-alt-relaxed/test/data.json', 'w') as file: \n",
+    "with open('../../.././data/femnist-data-clustered-alt-relaxed/test/data.json', 'w') as file: \n",
     "    json.dump(test_output, file)"
    ]
   },
