--- a/tangle/data/femnist_clustered_alt_relaxed_small/cluster_alt_relaxed_small_femnist-Copy1.ipynb
+++ b/tangle/data/femnist_clustered_alt_relaxed_small/cluster_alt_relaxed_small_femnist-Copy1.ipynb
@@ -259,9 +259,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../../../../data/femnist-data-clustered-alt-relaxed-small/train/data.json', 'w') as file: \n",
+    "with open('../../.././data/femnist-data-clustered-alt-relaxed-small/train/data.json', 'w') as file: \n",
     "    json.dump(train_output, file)\n",
-    "with open('../../../../data/femnist-data-clustered-alt-relaxed-small/test/data.json', 'w') as file: \n",
+    "with open('../../.././data/femnist-data-clustered-alt-relaxed-small/test/data.json', 'w') as file: \n",
     "    json.dump(test_output, file)"
    ]
   },
