--- a/tangle/data/femnist_small/femnist_small.ipynb
+++ b/tangle/data/femnist_small/femnist_small.ipynb
@@ -60,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "users, _, data,  = read_dir('../../../../data/femnist-data/large/train')"
+    "users, _, data,  = read_dir('../../.././data/femnist-data/large/train')"
    ]
   },
   {
@@ -69,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_, _, data_test,  = read_dir('../../../../data/femnist-data/large/test')"
+    "_, _, data_test,  = read_dir('../../.././data/femnist-data/large/test')"
    ]
   },
   {
@@ -150,9 +150,9 @@
     "train_output['users'] = list(train_output['user_data'].keys())\n",
     "test_output['users'] = train_output['users']\n",
     "\n",
-    "with open('../../../../data/femnist-data-small/train/data.json', 'w') as file: \n",
+    "with open('../../.././data/femnist-data-small/train/data.json', 'w') as file: \n",
     "    json.dump(train_output, file)\n",
-    "with open('../../../../data/femnist-data-small/test/data.json', 'w') as file: \n",
+    "with open('../../.././data/femnist-data-small/test/data.json', 'w') as file: \n",
     "    json.dump(test_output, file)"
    ]
   },
