--- a/tangle/data/fmnist/preprocess.ipynb
+++ b/tangle/data/fmnist/preprocess.ipynb
@@ -85,8 +85,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "users, _, data,  = read_dir('../../../../data/femnist-data/large/train')\n",
-    "_, _, data_test,  = read_dir('../../../../data/femnist-data/large/test')"
+    "users, _, data,  = read_dir('../../.././data/femnist-data/large/train')\n",
+    "_, _, data_test,  = read_dir('../../.././data/femnist-data/large/test')"
    ]
   },
   {
@@ -159,9 +159,9 @@
     "\n",
     "test_output['cluster_ids'] = train_output['cluster_ids']\n",
     "test_output['users'] = train_output['users']\n",
-    "with open('../../../../data/fmnist/train/data.json', 'w') as f: \n",
+    "with open('../../.././data/fmnist/train/data.json', 'w') as f: \n",
     "    json.dump(train_output, f)\n",
-    "with open('../../../../data/fmnist/test/data.json', 'w') as f: \n",
+    "with open('../../.././data/fmnist/test/data.json', 'w') as f: \n",
     "    json.dump(test_output, f)"
    ]
   },
