--- a/tangle/data/cifar_100/Test_CIFAR_data.ipynb
+++ b/tangle/data/cifar_100/Test_CIFAR_data.ipynb
@@ -241,7 +241,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = '../../../../data/cifar100/'"
+    "data_dir = '../../.././data/cifar100/'"
    ]
   },
   {
