--- a/tangle/data/femnist_clustered_alt_small/cluster_alt_femnist-small-Copy1.ipynb
+++ b/tangle/data/femnist_clustered_alt_small/cluster_alt_femnist-small-Copy1.ipynb
@@ -60,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "users, _, data,  = read_dir('../../../../data/femnist-data/large/train')"
+    "users, _, data,  = read_dir('../../.././data/femnist-data/large/train')"
    ]
   },
   {
@@ -69,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_, _, data_test,  = read_dir('../../../../data/femnist-data/large/test')"
+    "_, _, data_test,  = read_dir('../../.././data/femnist-data/large/test')"
    ]
   },
   {
@@ -239,9 +239,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../../../../data/femnist-data-clustered-alt-small/train/data.json', 'w') as file: \n",
+    "with open('../../.././data/femnist-data-clustered-alt-small/train/data.json', 'w') as file: \n",
     "    json.dump(train_output, file)\n",
-    "with open('../../../../data/femnist-data-clustered-alt-small/test/data.json', 'w') as file: \n",
+    "with open('../../.././data/femnist-data-clustered-alt-small/test/data.json', 'w') as file: \n",
     "    json.dump(test_output, file)"
    ]
   },
